blog inner slider changes

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -99,8 +99,8 @@
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 02, 2024</h3>
+                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
                 <a routerLink="/resource-3" class="blog_card_wrap">
@@ -108,8 +108,8 @@
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 21, 2024</h3>
+                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-2" class="blog_card_wrap">
@@ -117,8 +117,8 @@
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 06, 2024</h3>
+                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
                 <a routerLink="/resource-4" class="blog_card_wrap">
@@ -126,8 +126,8 @@
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 27, 2024</h3>
+                        <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-5" class="blog_card_wrap">
@@ -135,46 +135,10 @@
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>March 11, 2024</h3>
+                        <p>How to Build a Winning Shopify Store Design</p>
                     </div>
                 </a>
-                <!-- <a routerLink="/resource-6" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-six.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a routerLink="/resource-7" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-seven.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a routerLink="/resource-8" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-eight.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a routerLink="/resource-9" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-nine.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a> -->
                 <div class="cdk-button-wrap margin-auto"  id="loadMore">
                     <a class="cdk-btn-green" href="javascript:void(0)">Load more</a>
                 </div>
