--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -146,7 +146,7 @@
                     </fieldset>
                     <div class="file-upload flex-column">
                         <label for="myfile">Upload your CV *</label>
-                        <input type="file" id="myfile" name="myfile" class="custom-file-input">
+                        <input type="file" id="myfile" name="myfile" accept=".pdf, .doc" class="custom-file-input">
                     </div>
                     <button class="cdk-contact-btn">Send</button>
                 </form>
