--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -38,79 +38,7 @@
                     </p>
                 </div>
             </div>
-            <div class="out-team-all-wrap flex">
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/tanish.webp" width="100%" alt="tanish">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Tanish Kumar</h4>
-                                <p class="designation">Senior Developer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Tanish Kumar</h4>
-                            <p class="designation">Senior Developer</p>
-                            <p class="discription-member">
-                                Tanish Kumar, an accomplished senior developer, excels in crafting innovative and scalable solutions, showcasing expertise in various coding languages. With a collaborative approach and effective communication, he consistently delivers high-quality projects that exceed expectations.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/abhinav.webp" width="100%" alt="abhinav">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Abhinav Thakur</h4>
-                                <p class="designation">Senior Developer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Abhinav Thakur</h4>
-                            <p class="designation">Senior Developer</p>
-                            <p class="discription-member">
-                                Abhinav Thakur, a distinguished senior developer, stands out for his exceptional proficiency in coding and a strategic approach to software development. With a keen eye for detail, he consistently delivers cutting-edge solutions, showcasing a deep understanding of various programming languages
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/chota-don.webp" width="100%" alt="arushi">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Arushi sharma</h4>
-                                <p class="designation">Senior Web designer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Arushi sharma</h4>
-                            <p class="designation">Senior Web designer</p>
-                            <p class="discription-member">
-                                Arushi Sharma, a seasoned Senior Web Designer, brings creativity and technical prowess to every project she undertakes. With a flair for innovative and visually stunning designs, Arushi has consistently elevated user experiences, leaving a lasting impact. Her meticulous attention to detail,.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/amit.webp" width="100%" alt="amit">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Anit Kumar Singh</h4>
-                                <p class="designation">Web & graphic designer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Anit Kumar Singh</h4>
-                            <p class="designation">Web & graphic designer</p>
-                            <p class="discription-member">
-                                Amit Kumar Singh, a versatile Web & Graphic Designer, stands out for his unique blend of creativity and technical expertise. With an eye for detail and a passion for innovative design, Amit consistently delivers visually striking and user-centric solutions.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+            <!-- <div class="out-team-all-wrap flex">
                 <div class="team-member-card">
                     <div class="card-inner-member">
                         <div class="card-member-front">
@@ -166,6 +94,134 @@
                     </div>
                 </div>
                 <div class="team-member-card hide">
+                </div>
+            </div> -->
+            <div class="all-team-cards-wrapper flex">
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/tanish.webp" width="100%" alt="tanish">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Tanish Kumar</h4>
+                                <p class="designation">Senior Developer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Tanish Kumar</h4>
+                            <p class="designation-back">Senior Developer</p>
+                            <p class="discription-member">
+                                Tanish Kumar, an accomplished senior developer, excels in crafting innovative and scalable solutions, showcasing expertise in various coding languages. With a collaborative approach and effective communication, he consistently delivers high-quality projects that exceed expectations.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/abhinav.webp" width="100%" alt="abhinav">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Abhinav Thakur</h4>
+                                 <p class="designation">Senior Developer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Abhinav Thakur</h4>
+                            <p class="designation-back">Senior Developer</p>
+                            <p class="discription-member">
+                                Abhinav Thakur, a distinguished senior developer, stands out for his exceptional proficiency in coding and a strategic approach to software development. With a keen eye for detail, he consistently delivers cutting-edge solutions, showcasing a deep understanding of various programming languages
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/chota-don.webp" width="100%" alt="arushi">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Arushi sharma</h4>
+                                <p class="designation">Senior Web designer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Arushi sharma</h4>
+                            <p class="designation-back">Senior Web designer</p>
+                            <p class="discription-member">
+                                Arushi Sharma, a seasoned Senior Web Designer, brings creativity and technical prowess to every project she undertakes. With a flair for innovative and visually stunning designs, Arushi has consistently elevated user experiences, leaving a lasting impact. Her meticulous attention to detail,.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/amit.webp" width="100%" alt="amit">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Anit Kumar Singh</h4>
+                                <p class="designation">Web & graphic designer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Anit Kumar Singh</h4>
+                            <p class="designation-back">Web & graphic designer</p>
+                            <p class="discription-member">
+                                Amit Kumar Singh, a versatile Web & Graphic Designer, stands out for his unique blend of creativity and technical expertise. With an eye for detail and a passion for innovative design, Amit consistently delivers visually striking and user-centric solutions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/indersain.webp" width="100%" alt="inder">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Inder Suthar</h4>
+                                <p class="designation">Front-end developer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Inder Suthar</h4>
+                            <p class="designation-back">Front-end developer</p>
+                            <p class="discription-member">
+                                Inder Suthar, an adept Front-end Developer, is distinguished by his skillful coding and commitment to creating seamless user interfaces. With a keen understanding of the latest web technologies, Inder transforms design concepts into interactive and visually appealing websites.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/vikash.webp" width="100%" alt="tanish">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Vikas Kumar</h4>
+                                <p class="designation">Web designer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Vikas Kumar</h4>
+                            <p class="designation-back">Web designer</p>
+                            <p class="discription-member">
+                                Vikas Thakur, an accomplished Web Designer, brings a fusion of creativity and technical prowess to every project. With a keen eye for aesthetics and a deep understanding of user experience, Vikas consistently produces visually stunning and functional designs.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card member-card">
+                    <div class="content">
+                        <div class="front">
+                            <img src="../../assets/image/team-member/loveleen.webp" width="100%" alt="loveleen">
+                            <div class="card-member-detail">
+                                <h4 class="member-name">Loveleen Kaur</h4>
+                                <p class="designation">Web designer</p>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <h4 class="member-name">Loveleen Kaur</h4>
+                            <p class="designation-back">Web designer</p>
+                            <p class="discription-member">
+                                Loveleen Kaur, a highly skilled Web Designer, is celebrated for her ability to blend artistic creativity with technical precision. With an innate sense of design aesthetics, Loveleen consistently delivers websites that captivate and engage users.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
