--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -157,7 +157,7 @@
                     <a routerLink="/fames-chocolates" class="work-image_one work-image_all">
                         <div class="card-h-txt">
                             <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
-                            <h3 class="logo_card">Fameschocolates</h3>
+                            <h3 class="logo_card">FAMESCHOCOLATES</h3>
                             <div class="bottom_card">
                             <h4 class="card-heading">Fameschocolates</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
