--- a/src/styles.css
+++ b/src/styles.css
@@ -676,6 +676,7 @@ body {
     line-height: 27px;
     width: 100%;
     max-width: 402px;
+    text-transform: capitalize;
 }
 .blogs-section .our_work_all_wrap {
     padding: 0 11px 0 30px;
@@ -687,7 +688,6 @@ body {
     padding: 0 19px 0 0;
     text-decoration: none;
 }
-
 /* about page */
 .main-title-section .main-title-wrap {
     padding: 100px 0;
@@ -1672,11 +1672,11 @@ html {
     border-radius: 5px;
     padding-left: 21px;
     color: #2B3D51;
-    /* font-family: Barlow Condensed; */
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    outline: none;
 }
 #blog-detail-first.blog-detail-section .blog-body-and-newsletter .blog-newslwtter-wrap .news-container form button {
     width: 100%;
@@ -2553,6 +2553,25 @@ html {
     min-height: unset;
     object-fit: cover;
     display: block;
+}
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.text {
+    max-width: unset;
+}
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.protech {
+    max-width: 100px;
+    object-fit: contain;
+}
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.egyptian {
+    max-width: 280px;
+    object-fit: contain;
+}
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.mresi {
+    max-width: 100px;
+    max-height: 60px;
+    object-fit: contain;
+}
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.igluu {
+    object-fit: contain;
 }
 #case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .bottom_card .card-heading {
     color: #FFF;
